Extend animation to prevent render overlap

--- a/src/App.css
+++ b/src/App.css
@@ -325,7 +325,7 @@
 }
 
 .flipout {
-  animation: flipOut 300ms;
+  animation: flipOut 350ms;
 }
 
 .flipinout {
